# SurroundSounder

./: CMakeLists.txt  debug_entitlement.sh
CMake/: GeneratePlugin.cmake
Lib/Components/: BottomRow.cpp  BottomRow.h  MiddleRow.cpp  MiddleRow.h  MyLookAndFeel.cpp  MyLookAndFeel.h  NumBussesComboBox.cpp  NumBussesComboBox.h  SliderContainer.cpp  SliderContainer.h  TopRow.cpp  TopRow.h
Lib/DSP/: AudioHelpers.h  Delay.cpp  Delay.h  Panning.cpp  Panning.h
Lib/Interfaces/: ProcessorInterface.h
Lib/Managers/Parameter Manager/: ParameterDefines.h  ParameterManager.cpp  ParameterManager.h
Plugins/SurroundSounder/: CMakeLists.txt
Plugins/SurroundSounder/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
